<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_force_dimension_examples</name>
  <version>0.0.0</version>
  <description>ROS2 implementations of the examples provided by the Force Dimension haptics and robotics SDK</description>
  <maintainer email="a@whit.contact">a.whit</maintainer>
  <license>Mozille Public License 2.0</license>

  <depend>ros_force_dimension</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
